# artifacts/api-server/src/app.ts
@@ -26,6 +26,8 @@ app.use(
   }),
 );
 app.use(cors());
+
+app.use("/api/webhook", express.raw({ type: "application/json" }));
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 
